--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
     "type": "git",
     "url": "git+https://github.com/rocketpunchlabs/rpl-helpers.git"
   },
-  "keywords": ["helpers", "rpl"],
+  "keywords": [
+    "helpers",
+    "rpl"
+  ],
   "author": "John Albritton",
   "license": "ISC",
   "bugs": {
@@ -18,6 +21,8 @@
   },
   "devDependencies": {
     "chai": "^4.1.2",
+    "coveralls": "^3.0.0",
+    "istanbul": "^0.4.5",
     "mocha": "^4.0.1"
   }
 }
