--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "rpl-helpers",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "Helper library for Rocketpunch Labs",
   "main": "index.js",
   "scripts": {
@@ -10,10 +10,7 @@
     "type": "git",
     "url": "git+https://github.com/rocketpunchlabs/rpl-helpers.git"
   },
-  "keywords": [
-    "helpers",
-    "rpl"
-  ],
+  "keywords": ["helpers", "rpl"],
   "author": "John Albritton",
   "license": "ISC",
   "bugs": {
